[package]
name = "globalping-probe"
version = "0.48.0"
edition = "2024"
description = "Rust rewrite of the globalping network measurement probe"
authors = ["Fyaz Manknojiya"]
license = "Apache-2.0"
repository = "https://github.com/fyaz6194/globalpingProbe-Rust"
keywords = ["network", "probe", "globalping", "measurement"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "globalping-probe"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[dependencies]
tokio       = { version = "1", features = ["full"] }
anyhow        = "1"
thiserror     = "2"
async-trait   = "0.1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
config      = "0.14"
uuid        = { version = "1", features = ["v4"] }
once_cell   = "1"
chrono      = { version = "0.4", features = ["serde"] }
ipnet       = "2"
regex       = "1"
futures     = "0.3"
futures-util  = "0.3"
rust_socketio = { version = "0.5", features = ["async"] }
bytes         = "1"
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio-test     = "0.4"
mockall        = "0.13"
assert_matches = "1.5"
tempfile       = "3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 0
debug = true
